Feature(KonaFiber):Synchronize virtual thread interface with Loom.
1. Update interface of virtual thread with Loom;
2. Modify test case with new interface
3. Modify demo with new interface

--task=864534459

Contributed-by:emoryzheng

    modified:   demo/fiber/mysql_sync_stress_demo/src/main/java/SyncDatabaseDemo.java
    modified:   demo/fiber/netty_stress_test/src/main/java/NettyClientDemo.java
    modified:   demo/fiber/sleep_stress_test/VTSleepStress.java
    modified:   demo/fiber/yield_stress_test/VTyield.java
    modified:   src/java.base/share/classes/java/lang/Thread.java
    new file:   src/java.base/share/classes/java/lang/ThreadBuilders.java
    modified:   src/java.base/share/classes/java/lang/VirtualThread.java
    modified:   test/jdk/java/lang/VirtualThread/DisableUseKonaFiber.java
    modified:   test/jdk/java/lang/VirtualThread/ParkTimeout.java
    modified:   test/jdk/java/lang/VirtualThread/SimpleVT.java
    modified:   test/jdk/java/lang/VirtualThread/SimpleVTDefault.java
    modified:   test/jdk/java/lang/VirtualThread/SingleThreadExecutorTest.java
    modified:   test/jdk/java/lang/VirtualThread/ThreadLocalTest.java
    modified:   test/jdk/java/lang/VirtualThread/TracePinStack.java
    modified:   test/jdk/java/lang/VirtualThread/VTCompensate.java
    modified:   test/jdk/java/lang/VirtualThread/VTDeoptimizeMonitor.java
    modified:   test/jdk/java/lang/VirtualThread/VTExecutorTest.java
    modified:   test/jdk/java/lang/VirtualThread/VTGetStackTrace.java
    modified:   test/jdk/java/lang/VirtualThread/VTInterruptTest.java
    modified:   test/jdk/java/lang/VirtualThread/VTPinnedCallback.java
    modified:   test/jdk/java/lang/VirtualThread/VTWaitTest.java
    modified:   test/jdk/java/lang/VirtualThread/loom/BuilderTest.java
    renamed:    test/jdk/java/lang/VirtualThread/Collectable.java -> test/jdk/java/lang/VirtualThread/loom/Collectable.java
    modified:   test/jdk/java/lang/VirtualThread/loom/CustomScheduler.java
    modified:   te